<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="categoria_notificaciones"
        android:title="@string/categoria_notificaciones">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/lista_frecuencia"
            android:entryValues="@array/lista_valores_frecuencia"
            android:key="@string/key_preferencia"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/titulo_preferencia" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="categoria_cuenta"
        android:title="@string/categoria_cuenta">
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/nots"
            android:key="notifs"
            android:summary="Habilita notificar" />
    </PreferenceCategory>
</PreferenceScreen>