<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_inicio"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/item_inicio" />
        <item
            android:id="@+id/item_cuenta"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/item_cuenta" />
        <item
            android:id="@+id/item_configuracion"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/item_configuracion" />
        <item
            android:id="@+id/item_agregarUsuario"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/addUser"/>
        <item
            android:id="@+id/item_listaFirebase"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/listaFirebase"/>
    </group>

</menu>